Remove api codes and add .gitignore.

--- a/resources/cayuse.properties
+++ b/resources/cayuse.properties
@@ -1,2 +1,2 @@
-openWeatherMapApiId=d16f2baab3c871115936e2d6cca61968
-googleApiKey=AIzaSyA3INAVopzfnJwkV_o68y6mNfpTxmH3HqQ
+openWeatherMapApiId=<YOUR_ID_HERE>
+googleApiKey=<YOUR_KEY_HERE>
