Project layout cleanup, better reading of properties file, and updated pom.

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,11 @@
   <groupId>Cayuse</groupId>
   <artifactId>Cayuse</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson -->
     <dependency>
